--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,6 +37,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.gson-2.3.jar=A:\\Libraries\\json\\gson-2.3.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -47,7 +48,8 @@ j2ee.server.type=WildFly
 jar.compress=false
 javac.classpath=\
     ${libs.spring-framework400.classpath}:\
-    ${libs.jstl.classpath}
+    ${libs.jstl.classpath}:\
+    ${file.reference.gson-2.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
